--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ ZENDESK_API_URL=
 ZENDESK_USERNAME=
 ZENDESK_API_KEY=
 OPSGENIE_API_KEY=
+FIRST_LINE_DEV_SUPPORT_GROUP_ID=21306177
+OPSGENIE_SCHEDULE_ID=e71d500f-896a-4b28-8b08-3bfe56e1ed76
