--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ env:
   ZENDESK_USERNAME: "email@example.com"
   ZENDESK_API_KEY: "some-fake-api-key"
   OPSGENIE_API_KEY: "some-fake-api-key"
+  FIRST_LINE_DEV_SUPPORT_GROUP_ID: 21306177
+  OPSGENIE_SCHEDULE_ID: "e71d500f-896a-4b28-8b08-3bfe56e1ed76"
 
 on: [push]
 
