--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,6 +4,8 @@ env:
   ZENDESK_USERNAME: ${{ secrets.ZENDESK_USERNAME }}
   ZENDESK_API_KEY: ${{ secrets.ZENDESK_API_KEY }}
   OPSGENIE_API_KEY: ${{ secrets.OPSGENIE_API_KEY }}
+  FIRST_LINE_DEV_SUPPORT_GROUP_ID: 21306177
+  OPSGENIE_SCHEDULE_ID: "e71d500f-896a-4b28-8b08-3bfe56e1ed76"
 
 on:
   schedule:
