Only make changes to group where necessary
When someone is removed from a group, all tickets assigned to them as
part of that group membership are unassigned from the individual and
reassigned to the group. Whilst this is intended behaviour when someone
leaves their support rota, we should not be unassigning people mid-rota.

This commit introduces checks that the action of either removing or
adding a person from the support group is necessary to make the group
match the rota.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ env:
   ZENDESK_USERNAME: "email@example.com"
   ZENDESK_API_KEY: "some-fake-api-key"
   OPSGENIE_API_KEY: "some-fake-api-key"
-  FIRST_LINE_DEV_SUPPORT_GROUP_ID: 21306177
+  FIRST_LINE_DEV_SUPPORT_GROUP_ID: 444111
   OPSGENIE_SCHEDULE_ID: "e71d500f-896a-4b28-8b08-3bfe56e1ed76"
 
 on: [push]
@@ -23,4 +23,4 @@ jobs:
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
-        bundle exec rake
+        script/test
